--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="img-perfil">
-            <img src="image/profile_.png" alt="">
+            <img src="image/profile03.png" alt="">
         </div>
     </main>
 </body>
