--- a/about.html
+++ b/about.html
@@ -21,23 +21,8 @@
                 <div id="contact"><a href="#">Contato</a></div>
             </div>
         </div>
-        <div id="main">
-            <div id="artigo">
-                <p>Olá,</p>
-                <h2>Eu sou Luan Winck</h2>
-                <h3>Desenvolvedor Full Stack</h3>
-                <p>Brasileiro</p>
-                <p><span>Entusiasta em tecnologia, principalmente em programação web.</span></p>
-            </div>
-            <div id="icon">
-                <div><a href=""><img src="image/github2.png" alt=""></a></div>
-                <div><a href=""><img src="image/linkedin2.png" alt="" class="linkedin"></a></div>
-                <div><a href=""><img src="image/instagram.png" alt=""></a></div>
-            </div>
-        </div>
-        <div id="aside">
-            <div id="img"><img src="image/aside3.png" alt=""></div>
-        </div>
+        <div id="main"></div>
+        <div id="aside"></div>
     </div>
 </body>
 </html>
