Adicionado novas pages
Foram criadas novas pages e um formulário.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 <body>
     <div class="container">
         <div id="nav">
-            <div id="logo"><a href="home.html">Portfólio</a></div>
+            <div id="logo"><a href="index.html">Portfólio</a></div>
             <div id="menu">
                 <div id="about"><a href="about.html">Sobre mim</a></div>
                 <div id="project"><a href="#">Projetos</a></div>
-                <div id="skill"><a href="#">Habilidades</a></div>
-                <div id="contact"><a href="#">Contato</a></div>
+                <div id="contact"><a href="contato.html">Contato</a></div>
             </div>
         </div>
         <div id="main">
