--- a/about.html
+++ b/about.html
@@ -7,22 +7,50 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/about.css">
     <title>Meu Portfolio</title>
 </head>
 <body>
     <div class="container">
         <div id="nav">
-            <div id="logo"><a href="home.html">Portfólio</a></div>
+            <div id="logo"><a href="index.html">Portfólio</a></div>
             <div id="menu">
                 <div id="about"><a href="about.html">Sobre mim</a></div>
                 <div id="project"><a href="#">Projetos</a></div>
-                <div id="skill"><a href="#">Habilidades</a></div>
-                <div id="contact"><a href="#">Contato</a></div>
+                <div id="contact"><a href="contato.html">Contato</a></div>
             </div>
         </div>
-        <div id="main"></div>
-        <div id="aside"></div>
+        <div id="main">
+            <div id="image">
+                <div id="img">
+                    <img src="image/Avatar02.png" alt="">
+                </div>                
+            </div>
+            <div id="icon">
+                <div><a href=""><img src="image/github2.png" alt=""></a></div>
+                <div><a href=""><img src="image/linkedin2.png" alt="" class="linkedin"></a></div>
+                <div><a href=""><img src="image/instagram.png" alt=""></a></div>
+            </div>            
+        </div>
+        <div id="aside">
+            <div id="artigo">
+                <h3>Me chamo <span>Luan Winck</span>, nascido em 1996 na cidade de Caxias, Rio de Janeiro</h3>
+                <h3>Meu primeiro contato com a programação foi no ano de 2006, através de um tio
+                    que me ensinou as primeiras linhas de comando pelo Prompt. Entretanto, só voltei 
+                    a ter contato com tecnologia alguns anos depois.</h3><br>
+                <h3>Iniciei um curso de design grafico em 2009 na empresa Seven, porém o curso fechou, 
+                    comprometendo a minha formação, devido a esse fato, desisti da carreira de 
+                    design.</h3><br>
+                <h3>No ano de 2019 ingressei na faculdade de Gestão de T.I, formação tecnólogo com duração de dois anos e meio. Entrei neste curso com a esperança de fazer concurso público e no decorrer
+                    do primeiro semestre, percebi que não queria ser um projetista, o curso não
+                    chamava a minha atenção, a metodologia era ultrapassada e a matéria cansativa. Entretanto no segundo semestre algo aconteceu, reencontrei uma velha amiga, a lógica da programação, que havia estado perdida por alguns anos, logo nas primeiras aulas notei que era o que eu queria. Estudei a ideia de no término da faculdade me especializar na área de desenvolvimento.</h3><br>
+                <h3>Concluí a faculdade no segundo semestre de 2021, até que meado de 2022,
+                    entrei em um novo ciclo, graças a iniciativa Programadores Carioca. Hoje sou um
+                    Desenvolvedor Full Stack em formação, ansioso por cada aula e realizado, pois
+                    um sonho de garoto está tomando forma no mundo real.</h3>
+            </div>
+        </div>
+            
     </div>
 </body>
 </html>
