--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
-    <title>Meu Portfolio</title>
+<html lang="pt-br"><head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&amp;family=Roboto:wght@100&amp;display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/home.css">
+	<title>Meu Portfolio</title>
 </head>
 <body>
-    <div class="container">
-        <div id="nav">
-            <div id="logo"><a href="index.html">Portfólio</a></div>
-            <div id="menu">
-                <div id="about"><a href="about.html">Sobre mim</a></div>
-                <div id="project"><a href="#">Projetos</a></div>
-                <div id="contact"><a href="contato.html">Contato</a></div>
-            </div>
-        </div>
-        <div id="main">
-            <div id="artigo">
-                <p>Olá,</p>
-                <h2>Eu sou Luan Winck</h2>
-                <h3>Desenvolvedor Full Stack</h3>
-                <p>Brasileiro</p>
-                <p><span>Entusiasta em tecnologia, principalmente em programação web.</span></p>
-            </div>
-            <div id="icon">
-                <div><a href=""><img src="image/github2.png" alt=""></a></div>
-                <div><a href=""><img src="image/linkedin2.png" alt="" class="linkedin"></a></div>
-                <div><a href=""><img src="image/instagram.png" alt=""></a></div>
-            </div>
-        </div>
-        <div id="aside">
-            <div id="img"><img src="image/aside3.png" alt=""></div>
-        </div>
-    </div>
-</body>
-</html>
+	<div class="container double">
+		<header><div class="wrapper header">
+			<div id="logo">
+							<a href="index.html">Portfólio</a>
+						</div>
+			<nav id="menu">
+				<div id="about"><a href="about.html">Sobre mim</a></div>
+				<div id="project"><a href="#">Projetos</a></div>
+				<div id="contact"><a href="contato.html">Contato</a></div>
+			</nav>
+		</div></header>
+		<main><div class="wrapper main">
+			<section class="text">
+				<p>Olá,</p>
+				<h2 class="color1">Eu sou <span class="no-words-break">Luan Winck</span></h2>
+				<h3 class="color2">Desenvolvedor <span class="no-words-break">Full Stack</span></h3>
+				<p>Brasileiro</p>
+				<p><span>Entusiasta em tecnologia, principalmente em programação web.</span></p>
+			</section>
+			<section id="links">
+				<div><a href="#"><img src="image/github2.png" alt=""></a></div>
+				<div><a href="#"><img src="image/linkedin2.png" alt="" class="linkedin"></a></div>
+				<div><a href="#"><img src="image/instagram.png" alt=""></a></div>
+			</section>
+		</div></main>
+		<aside><div class="wrapper aside">
+			<picture class="picture-aside brd-m-black"><img class="image-aside" src="image/aside3.png" alt="Ilustração de um desenvolverdor de software e sua ferramenta de trabalho, o computador."></picture>
+		</div></aside>
+	</div>
+
+</body></html>
