--- a/contato.html
+++ b/contato.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/contato.css">
-    <title>Meu Portfolio</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&amp;family=Roboto:wght@100&amp;display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="css/home.css">
+	<link rel="stylesheet" href="css/contato.css">
+	<title>Meu Portfolio</title>
 </head>
+
 <body>
-    <div class="container">
-        <div id="nav">
-            <div id="logo"><a href="index.html">Portfólio</a></div>
-            <div id="menu">
-                <div id="about"><a href="about.html">Sobre mim</a></div>
-                <div id="project"><a href="#">Projetos</a></div>
-                <div id="contact"><a href="contato.html">Contato</a></div>
-            </div>
-        </div>
-        <form action="/formulario-contato" method="post">
-                <div>
-                    <label for="nome">Nome: </label>
-                    <input type="text" id="nome" name="nome_usuario">
-                </div>
-                <div>
-                    <label for="email">Email: </label>
-                    <input type="email" id="email" name="email_usuario">
-                </div>
-                <div>
-                    <label for="texto">Texto: </label>
-                    <textarea name="texto_usuario" id="texto" cols="30" rows="10"></textarea>
-                </div>
-                <div class="button">
-                    <button type="submit">Enviar</button>
-                </div>
-        </form>      
-    </div>
+	<div class="container unique">
+		<header>
+			<div class="wrapper header">
+				<div id="logo"><a href="index.html">Portfólio</a></div>
+				<nav id="menu">
+					<div id="about"><a href="about.html">Sobre mim</a></div>
+					<div id="project"><a href="#">Projetos</a></div>
+					<div id="contact"><a href="contato.html">Contato</a></div>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<div class="wrapper main">
+				<form action="contato.html" method="post">
+					<div>
+						<label for="nome">Nome: </label>
+						<input type="text" id="nome" name="nome_usuario">
+					</div>
+					<div>
+						<label for="email">Email: </label>
+						<input type="email" id="email" name="email_usuario">
+					</div>
+					<div>
+						<label for="texto">Texto: </label>
+						<textarea name="texto_usuario" id="texto" cols="30" rows="10"></textarea>
+					</div>
+					<div class="button">
+						<button type="submit">Enviar</button>
+					</div>
+				</form>
+			</div>
+		</main>
+	</div>
+
 </body>
+
 </html>
