--- a/about.html
+++ b/about.html
@@ -16,14 +16,13 @@
 			<div id="logo"><a href="index.html">Portfólio</a></div>
 			<nav id="menu">
 				<div id="about"><a href="about.html">Sobre mim</a></div>
-				<div id="project"><a href="#">Projetos</a></div>
 				<div id="contact"><a href="contato.html">Contato</a></div>
 			</nav>
 		</div></header>
 		<main><div class="wrapper main">
 			<section id="image">
 				<picture class="picture-aside brdNone">
-					<img src="image/Avatar02.png" alt="">
+					<img src="image/avatar.png" alt="">
 				</picture>				
 			</section>
 			<section id="links">
