--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<p><span>Entusiasta em tecnologia, principalmente em programação web.</span></p>
 			</section>
 			<section id="links">
-				<div><a href="#"><img src="image/github2.png" alt=""></a></div>
-				<div><a href="#"><img src="image/linkedin2.png" alt="" class="linkedin"></a></div>
+				<div><a href="https://github.com/luuanwinck" target="_blank"><img src="image/github2.png" alt=""></a></div>
+				<div><a href="https://www.linkedin.com/in/luanwinck/" target="_blank"><img src="image/linkedin2.png" alt="" class="linkedin"></a></div>
 				<div><a href="#"><img src="image/instagram.png" alt=""></a></div>
 			</section>
 		</div></main>
